# HitboxBuilder-2D

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh
TestBed/: Example.cpp  Example.hpp  FileSystem.cpp  FileSystem.hpp  main.cpp
cmake/: EnableTests.cmake  ResolveSFML.cmake  Sources.cmake
cmake/Modules/: FindSFML.cmake
example/: main.cpp
inc/: BoundingBoxBuilder.hpp  ContourBuilder.hpp  HitboxManager.hpp  PolygonBuilder.hpp  PolygonPartitioner.hpp  Triangulator.hpp
include/: HitboxManager.hpp  Manager.hpp  Module.hpp  Types.hpp
include/detail/: BoundingBoxBuilder.hpp  ContourBuilder.hpp  CoordinateTransformer.hpp  Math.hpp  PolygonBuilder.hpp  PolygonPartitioner.hpp  Triangulator.hpp
src/: BoundingBoxBuilder.cpp  ContourBuilder.cpp  Manager.cpp  Module.cpp  PolygonBuilder.cpp  PolygonPartitioner.cpp  Triangulator.cpp
src/detail/: BoundingBoxBuilder.cpp  ContourBuilder.cpp  CoordinateTransformer.cpp  Math.cpp  PolygonBuilder.cpp  PolygonPartitioner.cpp  Triangulator.cpp
